--- a/connexion.html
+++ b/connexion.html
@@ -10,6 +10,12 @@
     </head>
 
     <body>
+        <header>
+            <img src="img.png">
+        </header>
        
+        <footer>
+            <a href="cgu.html">Lien vers les cgu</a>
+        </footer>
     </body>
 </html>
