--- a/connexion.html
+++ b/connexion.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <title>site</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="ft-10.css">
 
     </head>
 
