--- a/connexion.html
+++ b/connexion.html
@@ -10,6 +10,12 @@
     </head>
 
     <body>
+    	<form>
+    		<input type="text" name="pseudo" required="true">
+    		<input type="password" name="pw" required="true">
+    		<input type="checkbox" name="cgu" required="true">
+    	</form>
+    	<button><a href="homepage.html">lien vers page d'accueil</a></button>
        
     </body>
 </html>
